@@ -1,1 +1,1 @@
-10.9.0-digiumphones-rc3
+10.9.0-digiumphones
