@@ -1,118 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" /><title>Release Summary - asterisk-10.9.0-digiumphones-rc3</title></head>
-<body>
-<h1 align="center"><a name="top">Release Summary</a></h1>
-<h3 align="center">asterisk-10.9.0-digiumphones-rc3</h3>
-<h3 align="center">Date: 2012-10-05</h3>
-<h3 align="center">&lt;asteriskteam@digium.com&gt;</h3>
-<hr/>
-<h2 align="center">Table of Contents</h2>
-<ol>
-   <li><a href="#summary">Summary</a></li>
-   <li><a href="#contributors">Contributors</a></li>
-   <li><a href="#issues">Closed Issues</a></li>
-   <li><a href="#commits">Other Changes</a></li>
-   <li><a href="#diffstat">Diffstat</a></li>
-</ol>
-<hr/>
-<a name="summary"><h2 align="center">Summary</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This release includes only bug fixes.  The changes included were made only to address problems that have been identified in this release series.  Users should be able to safely upgrade to this version if this release series is already in use.  Users considering upgrading from a previous release series are strongly encouraged to review the UPGRADE.txt document as well as the CHANGES document for information about upgrading to this release series.</p>
-<p>The data in this summary reflects changes that have been made since the previous release, asterisk-10.9.0-digiumphones-rc2.</p>
-<hr/>
-<a name="contributors"><h2 align="center">Contributors</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This table lists the people who have submitted code, those that have tested patches, as well as those that reported issues on the issue tracker that were resolved in this release.  For coders, the number is how many of their patches (of any size) were committed into this release.  For testers, the number is the number of times their name was listed as assisting with testing a patch.  Finally, for reporters, the number is the number of issues that they reported that were closed by commits that went into this release.</p>
-<table width="100%" border="0">
-<tr>
-<td width="33%"><h3>Coders</h3></td>
-<td width="33%"><h3>Testers</h3></td>
-<td width="33%"><h3>Reporters</h3></td>
-</tr>
-<tr valign="top">
-<td>
-6 root<br/>
-2 bebuild<br/>
-2 Byron<br/>
-2 Karsten<br/>
-</td>
-<td>
-2 alecdavis<br/>
-2 Byron Clark<br/>
-1 tbsky<br/>
-</td>
-<td>
-1 alecdavis<br/>
-1 kristoff<br/>
-1 kwemheuer<br/>
-1 tbsky<br/>
-1 ulugutz<br/>
-</td>
-</tr>
-</table>
-<hr/>
-<a name="issues"><h2 align="center">Closed Issues</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all issues from the issue tracker that were closed by changes that went into this release.</p>
-<h3>Category: Applications/app_disa</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-17493">ASTERISK-17493</a>: [patch] dsp.c sends multiple DTMF key events up to applications<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374508">374508</a><br/>
-Reporter: alecdavis<br/>
-Testers: alecdavis<br/>
-Coders: root<br/>
-<br/>
-<h3>Category: Channels/chan_dahdi</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-20442">ASTERISK-20442</a>: dtmf callerid regression <br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374413">374413</a><br/>
-Reporter: tbsky<br/>
-Testers: tbsky, alecdavis<br/>
-Coders: root<br/>
-<br/>
-<h3>Category: Channels/chan_sip/General</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-20511">ASTERISK-20511</a>: Directrtpsetup does not wrk in SVN-branch-1.8-r374177<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374474">374474</a><br/>
-Reporter: kristoff<br/>
-Coders: root<br/>
-<br/>
-<h3>Category: Resources/res_jabber</h3><br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-19532">ASTERISK-19532</a>: Asterisk crashed after connecting with jabber server in component mode<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374364">374364</a><br/>
-Reporter: kwemheuer<br/>
-Testers: Byron Clark<br/>
-Coders: Karsten, Byron<br/>
-<br/>
-<a href="https://issues.asterisk.org/jira/browse/ASTERISK-19557">ASTERISK-19557</a>: [Regression] Segfault in res_jabber.c<br/>
-Revision: <a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374364">374364</a><br/>
-Reporter: ulugutz<br/>
-Testers: Byron Clark<br/>
-Coders: Karsten, Byron<br/>
-<br/>
-<hr/>
-<a name="commits"><h2 align="center">Commits Not Associated with an Issue</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a list of all changes that went into this release that did not directly close an issue from the issue tracker.  The commits may have been marked as being related to an issue.  If that is the case, the issue numbers are listed here, as well.</p>
-<table width="100%" border="1">
-<tr><td><b>Revision</b></td><td><b>Author</b></td><td><b>Summary</b></td><td><b>Issues Referenced</b></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374315">374315</a></td><td>root</td><td>Destroy the generic_monitors container after the core_instances in ccss</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374383">374383</a></td><td>root</td><td>_dsp_init: bring inline with trunk</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374455">374455</a></td><td>root</td><td>Fix DBDelTree error codes for AMI, CLI and AGI</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374526">374526</a></td><td>bebuild</td><td>Create 10.9.0-digiumphones-rc3</td>
-<td></td></tr><tr><td><a href="http://svn.digium.com/view/asterisk/branches/10-digiumphones?view=revision&revision=374529">374529</a></td><td>bebuild</td><td>Merge r374447 for ASTERISK-20511</td>
-<td></td></tr></table>
-<hr/>
-<a name="diffstat"><h2 align="center">Diffstat Results</h2></a>
-<center><a href="#top">[Back to Top]</a></center><br/><p>This is a summary of the changes to the source code that went into this release that was generated using the diffstat utility.</p>
-<pre>
-.version                                      |    2
-CHANGES                                       |    3
-ChangeLog                                     |   21 +++
-asterisk-10.9.0-digiumphones-rc2-summary.html |   61 -----------
-asterisk-10.9.0-digiumphones-rc2-summary.txt  |   91 -----------------
-channels/chan_sip.c                           |  108 +++++++++++---------
-configs/dsp.conf.sample                       |   36 ++++++
-main/ccss.c                                   |    9 -
-main/db.c                                     |   30 +++--
-main/dsp.c                                    |  138 +++++++++++++++++++-------
-res/res_agi.c                                 |   16 +--
-res/res_jabber.c                              |   12 ++
-12 files changed, 268 insertions(+), 259 deletions(-)
-</pre><br/>
-<hr/>
-</body>
-</html>
